# trimcts

./: .gitignore  .resumed.txt  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: ci_cd.yml
src/trimcts/cpp/: CMakeLists.txt
tests/: README.md  test_alpha_wrapper.py
