# File: pyproject.toml

[build-system]
requires = [
  "setuptools>=61.0",
  "wheel",
  "pybind11>=2.10",
  "cmake>=3.14"
]
build-backend = "setuptools.build_meta"

[project]
name = "trimcts"
version = "1.0.2"
authors = [
  { name="Luis Guilherme P. M.", email="lgpelin92@gmail.com" },
]
description = "High‑performance C++ MCTS (AlphaZero & MuZero) for triangular games"
readme = "README.md"
license = "MIT" # Use SPDX identifier string
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 3 – Alpha",
  "Intended Audience :: Developers",
  # "License :: OSI Approved :: MIT License", # Removed deprecated classifier
  "Programming Language :: Python :: 3.10",
  "Programming Language :: C++",
]
dependencies = [
  "numpy>=1.20.0",
  "pydantic>=2.0.0",
  "trianglengin>=1.0.6",
]

[project.urls]
"Homepage"    = "https://github.com/lguibr/trimcts"
"Bug Tracker" = "https://github.com/lguibr/trimcts/issues"

[project.optional-dependencies]
dev = ["pytest>=7.0","pytest-cov","ruff","mypy"]

[tool.pytest.ini_options]
addopts = "-ra -q --cov=src/trimcts --cov-report=term-missing"
testpaths = ["tests"]

[tool.mypy]
# Global options
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = false # Be strict by default
disallow_untyped_defs = true   # Ensure functions are typed

[[tool.mypy.overrides]]
module = "trianglengin.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
# Ignore the compiled C++ extension module
module = "trimcts.trimcts_cpp"
ignore_missing_imports = true